# dockssh

./: .gitignore  Makefile  README.md  agent.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: ROADMAP-cloud.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  models.rs  state.rs
src-tauri/src/commands/: compose.rs  container.rs  files.rs  host.rs  image.rs  logo.rs  logs.rs  mod.rs  network.rs  pty.rs  registry.rs  stats.rs  volume.rs  window.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/docker/: compose.rs  container.rs  detect.rs  image.rs  logs.rs  mod.rs  network.rs  parse.rs  registry.rs  stats.rs  volume.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/ssh/: client.rs  mod.rs  pool.rs
src/api/: index.ts  types.ts
src/assets/file-icons/: mapping.json
src/components/: ActivityBar.vue  AppSidebar.vue  AppTopBar.vue  FileIcon.vue  HostTabs.vue  Terminal.vue  TerminalPanel.vue  TitleBar.vue
src/router/: index.ts
src/store/: hosts.ts  stats.ts  tabs.ts  terminals.ts
src/utils/: terminal-migrate.ts
src/views/compose/: ComposeDetail.vue  ComposeEditor.vue  ComposeList.vue  IconButton.vue
src/views/containers/: ContainerCard.vue  ContainerDefaultIcon.vue  ContainerDetail.vue  ContainerIcon.vue  ContainerList.vue  ContainerLogs.vue  CreateContainerDialog.vue
src/views/dashboard/: DashboardView.vue
src/views/dev/: ComingSoon.vue
src/views/files/: FileExplorer.vue
(+8 files in other folders)
